# pixel-lock-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pixel_lock_lab/: __init__.py  array_types.py  cli.py  cv_compat.py  errors.py  geometry.py  imageutil.py  session.py  sources.py
src/pixel_lock_lab/config/: __init__.py  schemas.py
src/pixel_lock_lab/diagnostics/: __init__.py  drop_analyzer.py  log_schema.py  overlay.py
src/pixel_lock_lab/pipeline/: __init__.py  latency.py  preprocess.py  stabilize.py
src/pixel_lock_lab/simulation/: __init__.py  clutter.py  motion.py
src/pixel_lock_lab/trackers/: __init__.py  base.py  classical.py  deep.py  optical_flow.py
tests/: test_config.py  test_diagnostics.py  test_geometry.py  test_pipeline.py  test_session_and_cli.py  test_simulation.py  test_trackers.py
